# Phorcys

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  cicd.yml
Docker/: Dockerfile
doc/: example_bin.md  example_docker.md  example_flow.md  example_yara.md  install.md
phorcys/: phorcys_decode.py
phorcys/decoders/: base.py  base64.py  bzip.py  css.py  http_headers.py  json.py  protobuf.py  zlib.py
phorcys/inspectors/: yara_inspector.py
src/decoders/: deepdecoder.py  gzip.py  html.py  json.py  lzma.py  multipart.py  protobuf.py  text.py  urlencoded.py
src/loaders/: flow.py
src/plugins/: decoder.py
tests/: deepdecoder.py
