[metadata]
name = phorcys
version = 1.0.0
author = U+039b
author_email = forensics@0x39b.fr
description = A recursive decoding tool
long_description = file: README.md
keywords = forensics, decoding, recursive
license = AGPL-3.0
classifiers = 
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Topic :: Security
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.3
install_requires =
    mitmproxy
    bitstring
    flatten-json
    requests
    beautifulsoup4
    tinycss
    yara-python
    yapsy

[options.package_data]
* = *.md

[options.entry_points]
console_scripts =
    phorcys = phorcys.phorcys_decode.__main__:main

[options.packages.find]
exclude = 
    *.tests
    *.tests.*
    test*
    tests